--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -4,7 +4,7 @@ This work is under review at Platelets journal and is on the preprint server Med
 
 ## Background
 
-Obesity (body mass index ≥ 30 kg/m^2^) has nearly tripled worldwide in the last 45 years [@Bluher2019]. This is a major health concern as a higher body mass index (BMI) is an important risk factor for various noncommunicable disorders, including cardiovascular disease [@Bhaskaran2018a]. Clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders, including coronary heart disease and stroke 4-6 [@Nordestgaard2012; @Dale2017; @Wolk2003a]. 
+Obesity (body mass index ≥ 30 kg/m^2^) has nearly tripled worldwide in the last 45 years [@Bluher2019]. This is a major health concern as a higher body mass index (BMI) is an important risk factor for various noncommunicable disorders, including cardiovascular disease [@Bhaskaran2018a]. Clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders, including coronary heart disease and stroke [@Nordestgaard2012; @Dale2017; @Wolk2003a]. 
 
 Platelets are blood cells which are essential for the cessation of bleeding upon injury to a blood vessel and are involved in thrombosis and progression of cardiovascular disease [@Koupenova2017a]. When pathologically activated, platelets can aggregate to form thrombi thereby occluding arteries and triggering a myocardial infarction or stroke [@Koupenova2017a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis [@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets [@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Mechanisms of platelet hyperactivity are unclear, but it is possible that changes in platelet numbers, size and immaturity may play a role. Furthermore, an alteration in circulating metabolites or proteins induced by obesity could modulate the activation of platelets [@Goudswaard2021].
 
