--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -23,7 +23,7 @@ Mendelian randomisation is a technique which uses the random assortment of allel
 ## Mechanisms of obesity-related cardiovascular disease
 Obesity is caused by an increase in fat deposition and generally occurs when energy intake exceeds energy expenditure. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects [@Cercato2019; @Kern2001]. Due to these adipose tissue effects, obesity results in a state of chronic low-grade inflammation [@Esser2014], with an increase in adipose tumour necrosis factor-alpha (TNF-alpha) and interleukin-6 (IL-6) [@Kern2001]. Efforts have been made to understand how adiposity causes cardiovascular disease, with suggestion that inflammation, increased production of reactive oxygen species and endothelial dysfunction contribute to increased cardiovascular risk [@Cercato2019, add other refs].
 
-## Plasma markers of obesity
+## Plasma markers of obesity - change to unresolved issues???
 Studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, inlcuding low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL) [@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been expored in a causal framework. 
 
 As the majority of druggable targets are proteins, it is also valuable to explore the effects of BMI on circulating plasma proteins. It is estimated that 25% of proteins in the human proteome circulate in the blood [@Imming2006], including enzymes, protein kinases and transport proteins. Therefore, focusing on effects of adiposity on the circulating proteome may allow for the development of or repurposing of therapeutic interventions to reduce obesity-related disease. Previous studies that have explored the effect of adiposity on circulating proteins have used hypothesis driven approaches [@Timpson2011]. Attempts to evaluate the effect of BMI on the general proteome have been performed using observational analyses [@Cominetti2018]. Recent technologies have been developed which allow protein detection in unprecedented scope and detail, for example the SOMAscan by SomaLogic [@Gold2012], which can detect over 3,500 unique proteins. Although identifying alterations of individual proteins may provide therapeutic opportunities, assessing the overall protein profile of adiposity may provide more of a mechanistic insight into how adiposity causes disease.
@@ -32,7 +32,7 @@ As the majority of druggable targets are proteins, it is also valuable to explor
 ## Platelets are key cells involved in thrombosis
 Platelets are enucleate blood cells that are involved in the cessation of bleeding, but can cause thrombosis when activated pathologically. 
 Antiplatelet drugs used to prevent reocurrence of MI.
-BMI is linked to increased rates of thrombosis, therefore it is likely that platelets become hyperactive. There is conflicting literature surrounding this and cohorts to explore these effects are limited.
+BMI is linked to increased rates of thrombosis, therefore it is likely that platelets become hyperactive. There is conflicting literature surrounding this and cohorts to explore these effects are limited. .....
 
 ## Importance of interdisciplinary methods
 Each approach has biases and problems, which means we need to be careful ....
@@ -60,7 +60,7 @@ There will be 5 results chapters in this thesis:
 4) Effects of adiposity on the human plasma proteome: Observational and Mendelian randomization estimates (Chapter \@ref(BMI-protein-MR))
 5) Using a randomised control trial to explore the effects of caloric restriction-induced weight loss on the plasma proteome (Chapter \@ref(BMI-protein-RCT))
 
-## Publications from the PhD (in preparation or published)
+## Publications from the PhD
 
 **Goudswaard L. J.**, Bell J. A., Hughes D. A., Corbin L. J., Walter K., Davey Smith G., Soranzo N., Danesh J., Di Angelantonio E., Ouwehand W. H., Watkins N. A., Roberts D. J., Butterworth A. S., Hers I., Timpson N. J. Effects of adiposity on the human plasma proteome: Observational and Mendelian randomisation estimates (2021) Int J Obes https://doi.org/10.1038/s41366-021-00896-1
 
